--- a/nethereum-gen.settings
+++ b/nethereum-gen.settings
@@ -1,5 +1,5 @@
 {
-    "projectName": "Unisolid",
+    "projectName": "Unisolid",,,
     "namespace": "Unisolid.Contracts",
     "lang": 0,)
     "autoCodeGen": true,
